# ChangeLog for kde-misc/krename
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/krename/ChangeLog,v 1.7 2005/03/25 20:50:16 carlo Exp $

  25 Mar 2005; Carsten Lohrke <carlo@gentoo.org> krename-3.0.3.ebuild:
  stable on x86

  24 Feb 2005; Jason Wever <weeve@gentoo.org> krename-3.0.3.ebuild:
  Added ~sparc keyword.

*krename-3.0.3 (14 Feb 2005)

  14 Feb 2005; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.3.ebuild,
  -krename-3.0.3_rc1.ebuild, -krename-3.0.3_rc2.ebuild:
  version bump

*krename-3.0.3_rc2 (07 Jan 2005)

  07 Jan 2005; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.3_rc2.ebuild:
  version bump

*krename-3.0.3_rc1 (02 Dec 2004)

  02 Dec 2004; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.3_rc1.ebuild:
  version bump

*krename-3.0.2 (30 Oct 2004)

  30 Oct 2004; Carsten Lohrke <carlo@gentoo.org> +metadata.xml,
  +krename-2.8.5.ebuild, +krename-3.0.2.ebuild:
  Moved from app-misc/krename to kde-misc/krename.

  17 Oct 2004; Dylan Carlson <absinthe@gentoo.org> krename-3.0.2.ebuild:
  stable on amd64.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  krename-3.0.2.ebuild:
  Masked krename-3.0.2.ebuild stable for ppc

  09 Aug 2004; Danny van Dyk <kugelfang@gentoo.org> krename-3.0.2.ebuild:
  Marked ~amd64 and ~ppc. See BUG #59880.

*krename-3.0.2 (08 Aug 2004)

  08 Aug 2004; Carsten Lohrke <carlo@gentoo.org> -krename-3.0.0.ebuild,
  -krename-3.0.0_rc3.ebuild, -krename-3.0.1.ebuild, +krename-3.0.2.ebuild:
  version bump, marked stable immediately because of grave bug in 3.0.1, ebuild
  clean up

  06 Aug 2004; Carsten Lohrke <carlo@gentoo.org> krename-3.0.1.ebuild:
  stable on x86

*krename-3.0.1 (18 Jul 2004)

  18 Jul 2004; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.1.ebuild:
  version bump

*krename-3.0.0 (30 Jun 2004)

  30 Jun 2004; Carsten Lohrke <carlo@gentoo.org> :
  version bump
